# OmniMemo

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: sample_output.json  sample_output.md
docs/: application-zh.md  index.html
examples/: sample_meeting.txt
omni_memo/: __init__.py  cli.py  config.py  pipeline.py
omni_memo/agent/: dispatcher.py
omni_memo/omni/: processor.py
omni_memo/pro/: analyzer.py
omni_memo/tts/: generator.py
omni_memo/utils/: chunker.py  formatter.py
tests/: test_chunker.py  test_config.py  test_formatter.py  test_pipeline.py
