[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-memo"
version = "0.2.0"
description = "多模态会议智能体 — 基于 MiMo 全栈模型的会议理解与摘要系统"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "ohh561"}]
keywords = ["mimo", "meeting", "multimodal", "long-context", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.1",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["omni_memo*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "httpx", "ruff"]

[project.scripts]
omni-memo = "omni_memo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
